--- a/Toudly/Source/Main/TodoListTableViewCell.xib
+++ b/Toudly/Source/Main/TodoListTableViewCell.xib
@@ -23,49 +23,57 @@
                             <constraint firstAttribute="width" secondItem="sKW-CG-sLk" secondAttribute="height" id="rhU-6x-2TI"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TodoList" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0R-Yu-gpH">
-                        <rect key="frame" x="54" y="10" width="296" height="90"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="TodoList" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0R-Yu-gpH">
+                        <rect key="frame" x="54" y="10" width="59" height="90"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookmark_green" translatesAutoresizingMaskIntoConstraints="NO" id="JLf-xh-XBD">
-                        <rect key="frame" x="385.5" y="42" width="25.5" height="26"/>
-                        <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="JLf-xh-XBD" secondAttribute="height" id="JIn-G4-BQ8"/>
-                        </constraints>
-                    </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="alarm" translatesAutoresizingMaskIntoConstraints="NO" id="W8G-wj-gYg">
-                        <rect key="frame" x="355" y="42" width="25.5" height="26"/>
-                        <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="W8G-wj-gYg" secondAttribute="height" multiplier="1:1" id="C66-fS-fzf"/>
-                        </constraints>
-                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="a5t-OD-Flw">
+                        <rect key="frame" x="308.5" y="42" width="102.5" height="26"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wGO-Jw-wvF">
+                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="alarm" translatesAutoresizingMaskIntoConstraints="NO" id="W8G-wj-gYg">
+                                <rect key="frame" x="46.5" y="0.0" width="25.5" height="26"/>
+                                <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="W8G-wj-gYg" secondAttribute="height" id="tLF-mn-sjt"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookmark_green" translatesAutoresizingMaskIntoConstraints="NO" id="JLf-xh-XBD">
+                                <rect key="frame" x="77" y="0.0" width="25.5" height="26"/>
+                                <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="JLf-xh-XBD" secondAttribute="height" id="oXX-lN-Ych"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="sKW-CG-sLk" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.08" id="90m-8L-kNd"/>
-                    <constraint firstItem="W8G-wj-gYg" firstAttribute="centerY" secondItem="JLf-xh-XBD" secondAttribute="centerY" id="94l-7y-lj8"/>
-                    <constraint firstItem="W8G-wj-gYg" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.06" id="Fju-NO-0b1"/>
+                    <constraint firstAttribute="trailing" secondItem="a5t-OD-Flw" secondAttribute="trailing" constant="15" id="A1h-wX-gdn"/>
                     <constraint firstItem="G0R-Yu-gpH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="HRz-eH-ARk"/>
+                    <constraint firstItem="a5t-OD-Flw" firstAttribute="centerY" secondItem="G0R-Yu-gpH" secondAttribute="centerY" id="Ju5-Kf-LRm"/>
                     <constraint firstItem="sKW-CG-sLk" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="QOs-wl-1iy"/>
-                    <constraint firstItem="W8G-wj-gYg" firstAttribute="leading" secondItem="G0R-Yu-gpH" secondAttribute="trailing" constant="5" id="QbL-gL-bJv"/>
-                    <constraint firstItem="JLf-xh-XBD" firstAttribute="leading" secondItem="W8G-wj-gYg" secondAttribute="trailing" constant="5" id="bL0-2E-Boc"/>
                     <constraint firstItem="sKW-CG-sLk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="cVQ-HJ-jpK"/>
+                    <constraint firstItem="a5t-OD-Flw" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="G0R-Yu-gpH" secondAttribute="trailing" constant="5" id="d49-Wg-KAQ"/>
+                    <constraint firstItem="JLf-xh-XBD" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.06" id="kV2-X1-Wpi"/>
                     <constraint firstAttribute="bottom" secondItem="G0R-Yu-gpH" secondAttribute="bottom" constant="10" id="mjZ-z3-6Gc"/>
                     <constraint firstItem="G0R-Yu-gpH" firstAttribute="leading" secondItem="sKW-CG-sLk" secondAttribute="trailing" constant="10" id="tYH-rZ-UkI"/>
+                    <constraint firstItem="W8G-wj-gYg" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.06" id="yRa-Lp-SkT"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <constraints>
-                <constraint firstItem="njF-e1-oar" firstAttribute="trailing" secondItem="JLf-xh-XBD" secondAttribute="trailing" constant="15" id="5li-jK-Zqa"/>
-                <constraint firstItem="JLf-xh-XBD" firstAttribute="centerY" secondItem="njF-e1-oar" secondAttribute="centerY" id="6Z6-dN-pRE"/>
-                <constraint firstItem="JLf-xh-XBD" firstAttribute="width" secondItem="KGk-i7-Jjw" secondAttribute="width" multiplier="0.06" id="xnK-hm-NIz"/>
-            </constraints>
             <connections>
                 <outlet property="alarmImage" destination="W8G-wj-gYg" id="B3C-GE-Mdh"/>
+                <outlet property="alarmTimeLabel" destination="wGO-Jw-wvF" id="kzQ-Ko-xzT"/>
                 <outlet property="bookmarkImage" destination="JLf-xh-XBD" id="Ezf-Tj-fUH"/>
                 <outlet property="checkboxImage" destination="sKW-CG-sLk" id="Fa4-qN-gEo"/>
                 <outlet property="todoListLabel" destination="G0R-Yu-gpH" id="V1h-a4-e2F"/>
